# elephant_transformer_v2

./: .gitignore  README.md  clean.py  eval_log.txt  eval_log2.txt  eval_log3.txt  output.txt  pyproject.toml  train_output.txt
configs/: default.yaml  quick.yaml  smoke.yaml
data/: dataset.json
eval_output/: metrics.json
scripts/: run_eval.py  run_train.py
src/elephant_forecast/: config.py  evaluate.py  train.py
src/elephant_forecast/data/: dataset.py  features.py  sessionize.py
src/elephant_forecast/models/: backbone.py  forecaster.py  mdn.py
src/elephant_forecast/utils/: geo.py  metrics.py  seed.py
tests/: test_smoke.py
