[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elephant-forecast"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "scipy",
    "tqdm",
    "pyyaml",
    "matplotlib",
    "joblib",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/elephant_forecast"]
